stuf/src/p4/tests/t007.err
Semantic error on line 4: The array 'my_rectangle' was declared with illegal size '-5'. Arrays sizes must be integers of 1 or larger.
Semantic error on line 5: The array 'my_circle' was declared with illegal size '0'. Arrays sizes must be integers of 1 or larger.
