stuf/src/p4/tests/t007.gpl
//Should report errors on array size

int ii=-5;
rectangle my_rectangle[ii]; //should default to size of 1
circle    my_circle[0]; //should default to size of 1
